--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 <h2> Vigilância Armada </h2>
                                     <p class="service-item-text">
                                         Disponibilização de vigilantes armados formados e com as especializações necessárias para o cumprimento das atribuições elencadas para cada um.
-                                            <span class="service-item-span">Esta modalidade pode ser utilizada durante o horário comercial ou ainda se estender para uma cobertura de 24 horas 7 dias por semana.</span>
+                                            <span class="service-item-span">Durante o horário comercial ou ainda se estender para uma cobertura de 24 horas 7 dias por semana.</span>
                                     </p>
                         </div>
                         <div class="service-item third">
@@ -89,7 +89,7 @@
                                 <h2> Portaria Desarmada </h2>
                                     <p class="service-item-text">
                                         Disponibilização de auxiliares de segurança com especializações para desempenharem papéis menos críticos, que não necessitem de vigilantes armados.
-                                            <span class="service-item-span">Esta modalidade pode ser utilizada durante o horário comercial ou ainda se estender para uma cobertura de 24 horas 7 dias por semana.</span>
+                                            <span class="service-item-span">Durante o horário comercial ou ainda se estender para uma cobertura de 24 horas 7 dias por semana.</span>
                                     </p>
                         </div>
                         <div class="service-item four">
@@ -98,7 +98,7 @@
                                     <p class="service-item-text">
                                         Disponibilização de recepcionistas com especializações para desempenharem papéis relacionados a recpção de pessoas e atendimento telefônico durante o 
                                         horário de funcioanamento da empresa.
-                                            <span class="service-item-span">Esta modalidade geralmente é utilizada durante o horário comercial.</span>
+                                            <span class="service-item-span">Geralmente durante o horário comercial.</span>
                                     </p>
                         </div>
                     </div>
