--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                                 <div class="bar"> </div>
                             </div>
                                 <ul>
-                                    <li> <a href="#hero" data-after="Início"> Início </a> </li>
+                                    <li> <a href="#hero" data-after="Home" class="active"> Home </a> </li>
                                     <li> <a href="#services" data-after="Serviços"> Serviços </a> </li>
                                     <li> <a href="#projects" data-after="Sobre"> Sobre </a> </li>
                                     <li> <a href="#about" data-after="Direção"> Direção </a> </li>
@@ -68,15 +68,15 @@
                             </p>
                     </div>
                     <div class="service-bottom">
-                        <div class="service-item first">
+                        <div class="service-item">
                             <div class="item-icon icon-first"> </div>
                                 <h2> Profissionalismo </h2>
                                     <p class="service-item-text">
-                                        Possuímos profissionais especializados para fornecer esse tipo de atendimento. Assim o contratante não precisa se preocupar com este tipo de 
+                                        Profissionais especializados para fornecer esse tipo de atendimento. Assim o contratante não precisa se preocupar com este tipo de 
                                         serviço secundário e pode se focar na atividade fim (core-business) de sua empresa, que é o que gera lucro para a mesma.
                                     </p>
                         </div>
-                        <div class="service-item second">
+                        <div class="service-item">
                             <div class="item-icon icon-second"> </div>
                                 <h2> Vigilância Armada </h2>
                                     <p class="service-item-text">
@@ -84,15 +84,15 @@
                                             <span class="service-item-span">Durante o horário comercial ou ainda se estender para uma cobertura de 24 horas 7 dias por semana.</span>
                                     </p>
                         </div>
-                        <div class="service-item third">
+                        <div class="service-item">
                             <div class="item-icon icon-third"> </div>
                                 <h2> Portaria Desarmada </h2>
                                     <p class="service-item-text">
                                         Disponibilização de auxiliares de segurança com especializações para desempenharem papéis menos críticos, que não necessitem de vigilantes armados.
-                                            <span class="service-item-span">Durante o horário comercial ou ainda se estender para uma cobertura de 24 horas 7 dias por semana.</span>
+                                            <span class="service-item-span">Durante o horário comercial ou se estende para uma cobertura de 24 horas 7 dias por semana.</span>
                                     </p>
                         </div>
-                        <div class="service-item four">
+                        <div class="service-item">
                             <div class="item-icon icon-four"> </div>
                                 <h2> Recepcionista </h2>
                                     <p class="service-item-text">
