Finalizações de Layout na Section - Projects.
Minificação dos códigos-fonte HTML e CSS da Section - Projects;
Implementação dos conteúdos da Emrpesa nessa Section - Projects;
Ajustes iniciais de Layout;
Implementadas as novas imagens dos textos na Section - Projects;
Remoção do Overlay(camada ::after) das Tiles na Section - Projects;
Ajustes de responsividade para Tablet e Desktop na Section - Projects.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             <div class="item-icon icon-four"> </div>
                                 <h2> Recepcionista </h2>
                                     <p class="service-item-text">
-                                        Disponibilização de recepcionistas com especializações para desempenharem papéis relacionados a recpção de pessoas e atendimento telefônico durante o 
+                                        Disponibilização de recepcionistas com especializações para desempenharem papéis relacionados a recepção de pessoas e atendimento telefônico durante o 
                                         horário de funcioanamento da empresa.
                                             <span class="service-item-span">Geralmente durante o horário comercial.</span>
                                     </p>
@@ -107,160 +107,66 @@
             <!-- End Service Section -->
 
             <!-- Projects Section -->
-
             <section id="projects">
-
                 <div class="projects container">
-
                     <div class="projects-header">
-
-                        <h1 class="section-title"> Recent <span>Projects</span> </h1>
-
+                        <h1 class="section-title"> Nossa <span>História</span> </h1>
+                            <p>
+                                Tudo começou através de uma pesquisa de mercado na qual foi identificada uma oportunidade de negócio a ser empreendido na região. Sabendo que o mercado atualmente 
+                                não absorve novas empresas que produzem/prestam serviços do mesmo modo que as empresas já existentes, foi necessario criar vantagens competitivas para alavancar 
+                                essa empresa emergente.
+                            </p>
                     </div>
-
                     <div class="all-projects">
-
                         <div class="project-item">
-
                             <div class="project-info">
-
-                                <h1> Project 1 </h1>
-
-                                    <h2> Coding is Love </h2>
-
-                                        <p>
-
-                                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad,iusto cupiditate
-                                            voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius
-                                            odio ducimus illo neque atque libero non sunt harum? Ipsum repellat animi, fugit
-                                            architecto voluptatum odit et!
-
-                                        </p>
-
+                                <h1> Vantagem Competitiva </h1>
+                                    <p>
+                                        A nossa <span>vantagem competitiva</span> é a gestão do negócio, dos recursos e das pessoas feita de forma aprimorada, aplicando diversas práticas bem aceitas pelo 
+                                        mercado, tudo isso sendo realizado com o suporte de <span>pessoas capacitadas</span> para tal.
+                                    </p>
                             </div>
-
                             <div class="project-img">
-
-                                <img src="./images/img-1.png" alt="img"/>
-
+                                <img src="./vectors/advantage.svg"/>
                             </div>
-
                         </div>
-
                         <div class="project-item">
-
                             <div class="project-info">
-
-                                <h1> Project 2 </h1>
-
-                                    <h2> Coding is Love </h2>
-
-                                        <p>
-
-                                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad,iusto cupiditate
-                                            voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius
-                                            odio ducimus illo neque atque libero non sunt harum? Ipsum repellat animi, fugit
-                                            architecto voluptatum odit et!
-
-                                        </p>
-
+                                <h1> Objetivo</h1>
+                                    <p>
+                                        Nosso principal <span>objetivo</span> é prestar um <span>serviço com excelência</span>, e é por isso que queremos ser lembrados.
+                                    </p>
                             </div>
-
                             <div class="project-img">
-
-                                <img src="./images/img-1.png" alt="img"/>
-
+                                <img src="./vectors/achievement.svg"/>
                             </div>
-
                         </div>
-
                         <div class="project-item">
-
                             <div class="project-info">
-
-                                <h1> Project 3 </h1>
-
-                                    <h2> Coding is Love </h2>
-
-                                        <p>
-
-                                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad,iusto cupiditate
-                                            voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius
-                                            odio ducimus illo neque atque libero non sunt harum? Ipsum repellat animi, fugit
-                                            architecto voluptatum odit et!
-
-                                        </p>
-
+                                <h1> Foco </h1>
+                                    <p>
+                                        Nosso <span>foco</span> está voltado para solucionar os problemas de segurança apresentados pelas empresas contratantes, sendo <span>transparente</span> ao ponto de prestar o 
+                                        serviço com o <span>máximo de excelência</span> sem prejudicar o bom funcionamento das tarefas cotidianas da empresa contratante.
+                                    </p>
                             </div>
-
                             <div class="project-img">
-
-                                <img src="./images/img-1.png" alt="img"/>
-
+                                <img src="./vectors/focus.svg"/>
                             </div>
-
                         </div>
-
                         <div class="project-item">
-
                             <div class="project-info">
-
-                                <h1> Project 4 </h1>
-
-                                    <h2> Coding is Love </h2>
-
-                                        <p>
-
-                                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad,iusto cupiditate
-                                            voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius
-                                            odio ducimus illo neque atque libero non sunt harum? Ipsum repellat animi, fugit
-                                            architecto voluptatum odit et!
-
-                                        </p>
-
+                                <h1> Qualidade </h1>
+                                    <p>
+                                        Entregamos mais <span>qualidade</span> pois investimos em treinamento e capacitação dos colaboradores, bem como praticamos <span>políticas diferenciadas</span> para retenção de talentos.
+                                    </p>
                             </div>
-
                             <div class="project-img">
-
-                                <img src="./images/img-1.png" alt="img"/>
-
+                                <img src="./vectors/specialization.svg"/>
                             </div>
-
                         </div>
-
-                        <div class="project-item">
-
-                            <div class="project-info">
-
-                                <h1> Project 5 </h1>
-
-                                    <h2> Coding is Love </h2>
-
-                                        <p>
-
-                                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad,iusto cupiditate
-                                            voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius
-                                            odio ducimus illo neque atque libero non sunt harum? Ipsum repellat animi, fugit
-                                            architecto voluptatum odit et!
-
-                                        </p>
-
-                            </div>
-
-                            <div class="project-img">
-
-                                <img src="./images/img-1.png" alt="img"/>
-
-                            </div>
-
-                        </div>
-
                     </div>
-
                 </div>
-
             </section>
-
             <!-- End Projects Section -->
 
             <!-- About Section -->
