Finalização na Section - Footer.
Adicionado texto do Menu de "Nossos Colaboradores" da Wix na Section - Projects;
Alterada a Imagm de Background da Tile de Qualidade na Section - Projects;
Ajustes gerais na Section - Footer de Layout nos acessos Mobile e Desktop.

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                     </p>
                             </div>
                             <div class="project-img">
-                                <img src="./vectors/advantage.svg"/>
+                                <img src="./vectors/medal.svg"/>
                             </div>
                         </div>
                         <div class="project-item">
@@ -157,11 +157,13 @@
                             <div class="project-info">
                                 <h1> Qualidade </h1>
                                     <p>
-                                        Entregamos mais <span>qualidade</span> pois investimos em treinamento e capacitação dos colaboradores, bem como praticamos <span>políticas diferenciadas</span> para retenção de talentos.
+                                        Entregamos mais <span>qualidade</span> pois investimos em treinamento e capacitação dos colaboradores, bem como praticamos <span>políticas diferenciadas</span> para retenção de
+                                        talentos. Contamos com profissionais altamente capacitados que passam periodicamente por cursos de reciclagem para atender as normas existentes nesta área e a mantê-los 
+                                        <span>constantemente atualizados</span>.
                                     </p>
                             </div>
                             <div class="project-img">
-                                <img src="./vectors/specialization.svg"/>
+                                <img src="./vectors/quality-assurance.svg"/>
                             </div>
                         </div>
                     </div>
@@ -290,59 +292,23 @@
             <!-- End Contact Section -->
 
             <!-- Footer -->
-
             <section id="footer">
-
                 <div class="footer container">
-
                     <div class="brand">
-
-                        <h1> <span>S</span>haif <span>A</span>rfan </h1>
-
+                        <h1> JPGOBBI <span>Segurança Privada</span> </h1>
                     </div>
-
-                        <h2> Your Complete Web Solution </h2>
-
+                        <h2> Acompanhe a gente nas redes sociais! </h2>
                             <div class="social-icon">
-
                                 <div class="social-item">
-
-                                    <a href="#"> <img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png"/> </a>
-
+                                    <a href="https://www.facebook.com/jpgobbi" target="_blank"> <img src="./icons/facebook.svg" width="100px"/> </a>
                                 </div>
-
-                                <div class="social-item">
-
-                                    <a href="#"> <img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png"/> </a>
-
-                                </div>
-
-                                <div class="social-item">
-
-                                    <a href="#"> <img src="https://img.icons8.com/bubbles/100/000000/twitter.png"/> </a>
-
-                                </div>
-
-                                <div class="social-item">
-
-                                    <a href="#"> <img src="https://img.icons8.com/bubbles/100/000000/behance.png"/> </a>
-
-                                </div>
-
                             </div>
-
                                 <p>
-
-                                  Copyright &copy; 2020 Arfan. All rights reserved
-
+                                  Copyright &copy; 2020 JPGOBBI Segurança Privada. Todos os direitos reservados.
                                 </p>
-
                 </div>
-
             </section>
-
             <!-- End Footer -->
-
 
             <script type="text/javascript" src="./scripts.js"> </script>
             
