Responsividade dos Cards de Serviço.
Ajustada a responsividade (min-height) dos Cards na Section - Services dentro da Media Query para acesso Desktop;
Minificacação final (Inline CSS) em: /* Global CSS Parameters */.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <h1> Bem-vindo <span> </span> </h1>
                         <h1> ao site da <span> </span> </h1>
                         <h1> JPGOBBI <span> </span> </h1>
-                            <a href="#contact" type="button" class="cta"> Contatar </a>
+                            <a href="#contact" type="button" class="call_to_action"> Contatar </a>
                     </div>
                 </div>
             </section>
@@ -55,7 +55,7 @@
             <section id="services">
                 <div class="services container">
                     <div class="service-top">
-                        <h1 class="section-title"> Nossos <span>Serviços</span> </h1>
+                        <h1 class="section_title"> Nossos <span class="section_title_span">Serviços</span> </h1>
                             <p>
                                 &nbsp;&nbsp;&nbsp; A prestação de serviços na área de segurança privada, além de tratar da segurança física de 
                                 bens, patrimônios e pessoas, está inevitavelmente relacionada com a portaria/recepção das empresas.
@@ -110,7 +110,7 @@
             <section id="projects">
                 <div class="projects container">
                     <div class="projects-header">
-                        <h1 class="section-title"> Nossa <span>História</span> </h1>
+                        <h1 class="section_title"> Nossa <span class="section_title_span">História</span> </h1>
                             <p>
                                 Tudo começou através de uma pesquisa de mercado na qual foi identificada uma oportunidade de negócio a ser empreendido na região. Sabendo que o mercado atualmente 
                                 não absorve novas empresas que produzem/prestam serviços do mesmo modo que as empresas já existentes, foi necessario criar vantagens competitivas para alavancar 
@@ -217,7 +217,7 @@
             <section id="contact">
                 <div class="contact container">
                     <div>
-                        <h1 class="section-title"> Fale <span>Conosco</span> </h1>
+                        <h1 class="section_title"> Fale <span class="section_title_span">Conosco</span> </h1>
                             <p>
                                 Agora com o nosso novo cantinho virtual, ficou ainda mais fácil para você, Colaborador ou Parceiro, entrar 
                                 em contato conosco. Basta clicar em um dos cards abaixo que os aplicativos no seu dispositivo abrirão 
@@ -271,7 +271,7 @@
             <section id="footer">
                 <div class="footer container">
                     <div class="brand">
-                        <h1> JPGOBBI <span>Segurança Privada</span> </h1>
+                        <h1 class="brand_title"> JPGOBBI <span class="brand_span">Segurança Privada</span> </h1>
                     </div>
                         <h2> Acompanhe a gente nas redes sociais! </h2>
                             <div class="social-icon">
