Minificação final do Main Header e JavaScript da página.
Minificação dos códigos-fonte JavaScript e CSS do Main Header de Navegação do acesso Mobile.

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <!-- Main Header Menu -->
             <section id="header">
                 <div class="header container">
-                    <div class="nav-bar">
+                    <div class="nav_bar">
                         <div class="brand">
                             <a href="#hero"> <h1 class="brand_title"><span class="brand_span">JPGOBBI</span> Segurança Privada</h1> </a>
                         </div>
-                        <div class="nav-list">
+                        <div class="nav_list">
                             <div class="hamburger">
                                 <div class="bar"> </div>
                             </div>
