Minificação dos CSSs das Sections Hero e Services.
Minificação final do código-fonte CSS (Inline CSS) da Section - Hero;
Minificação final do código-fonte CSS (inline CSS) da Section - Services.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <!-- Service Section -->
             <section id="services">
                 <div class="services container">
-                    <div class="service-top">
+                    <div class="service_top">
                         <h1 class="section_title"> Nossos <span class="section_title_span">Serviços</span> </h1>
                             <p>
                                 &nbsp;&nbsp;&nbsp; A prestação de serviços na área de segurança privada, além de tratar da segurança física de 
@@ -67,38 +67,38 @@
                                 seja bem vista desde o seu portão de entrada.
                             </p>
                     </div>
-                    <div class="service-bottom">
-                        <div class="service-item">
-                            <div class="item-icon icon-first"> </div>
+                    <div class="service_bottom">
+                        <div class="service_item">
+                            <div class="item_icon icon_first"> </div>
                                 <h2> Profissionalismo </h2>
-                                    <p class="service-item-text">
+                                    <p class="service_item_text">
                                         Profissionais especializados para fornecer esse tipo de atendimento. Assim o contratante não precisa se preocupar com este tipo de 
                                         serviço secundário e pode se focar na atividade fim (core-business) de sua empresa, que é o que gera lucro para a mesma.
                                     </p>
                         </div>
-                        <div class="service-item">
-                            <div class="item-icon icon-second"> </div>
+                        <div class="service_item">
+                            <div class="item_icon icon_second"> </div>
                                 <h2> Vigilância Armada </h2>
-                                    <p class="service-item-text">
+                                    <p class="service_item_text">
                                         Disponibilização de vigilantes armados formados e com as especializações necessárias para o cumprimento das atribuições elencadas para cada um.
-                                            <span class="service-item-span">Durante o horário comercial ou ainda se estender para uma cobertura de 24 horas 7 dias por semana.</span>
+                                            <span class="service_text_span">Durante o horário comercial ou ainda se estender para uma cobertura de 24 horas 7 dias por semana.</span>
                                     </p>
                         </div>
-                        <div class="service-item">
-                            <div class="item-icon icon-third"> </div>
+                        <div class="service_item">
+                            <div class="item_icon icon_third"> </div>
                                 <h2> Portaria Desarmada </h2>
-                                    <p class="service-item-text">
+                                    <p class="service_item_text">
                                         Disponibilização de auxiliares de segurança com especializações para desempenharem papéis menos críticos, que não necessitem de vigilantes armados.
-                                            <span class="service-item-span">Durante o horário comercial ou se estende para uma cobertura de 24 horas 7 dias por semana.</span>
+                                            <span class="service_text_span">Durante o horário comercial ou se estende para uma cobertura de 24 horas 7 dias por semana.</span>
                                     </p>
                         </div>
-                        <div class="service-item">
-                            <div class="item-icon icon-four"> </div>
+                        <div class="service_item">
+                            <div class="item_icon icon_four"> </div>
                                 <h2> Recepcionista </h2>
-                                    <p class="service-item-text">
+                                    <p class="service_item_text">
                                         Disponibilização de recepcionistas com especializações para desempenharem papéis relacionados a recepção de pessoas e atendimento telefônico durante o 
                                         horário de funcioanamento da empresa.
-                                            <span class="service-item-span">Geralmente durante o horário comercial.</span>
+                                            <span class="service_text_span">Geralmente durante o horário comercial.</span>
                                     </p>
                         </div>
                     </div>
