Minificação final do CS da Section - Projects.
Minificação final dos códigos-fonte do CSS (Inline CSS) da Section - Projects;
Alteração de algumas classes novas (com padronização em Underscore_);
Minificação final (Inline JS) dos Scripts JavaScript da página.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <!-- Projects Section -->
             <section id="projects">
                 <div class="projects container">
-                    <div class="projects-header">
+                    <div class="projects_header">
                         <h1 class="section_title"> Nossa <span class="section_title_span">História</span> </h1>
                             <p>
                                 Tudo começou através de uma pesquisa de mercado na qual foi identificada uma oportunidade de negócio a ser empreendido na região. Sabendo que o mercado atualmente 
@@ -117,44 +117,44 @@
                                 essa empresa emergente.
                             </p>
                     </div>
-                    <div class="all-projects">
-                        <div class="project-item">
-                            <div class="project-info">
+                    <div class="all_projects">
+                        <div class="project_item">
+                            <div class="project_info">
                                 <h1> Vantagem Competitiva </h1>
                                     <p>
                                         A nossa <span>vantagem competitiva</span> é a gestão do negócio, dos recursos e das pessoas feita de forma aprimorada, aplicando diversas práticas bem aceitas pelo 
                                         mercado, tudo isso sendo realizado com o suporte de <span>pessoas capacitadas</span> para tal.
                                     </p>
                             </div>
-                            <div class="project-img">
+                            <div class="project_image">
                                 <img src="./vectors/medal.svg"/>
                             </div>
                         </div>
-                        <div class="project-item">
-                            <div class="project-info">
+                        <div class="project_item">
+                            <div class="project_info">
                                 <h1> Objetivo</h1>
                                     <p>
                                         Nosso principal <span>objetivo</span> é prestar um <span>serviço com excelência</span>, e é por isso que queremos ser lembrados.
                                     </p>
                             </div>
-                            <div class="project-img">
+                            <div class="project_image">
                                 <img src="./vectors/achievement.svg"/>
                             </div>
                         </div>
-                        <div class="project-item">
-                            <div class="project-info">
+                        <div class="project_item">
+                            <div class="project_info">
                                 <h1> Foco </h1>
                                     <p>
                                         Nosso <span>foco</span> está voltado para solucionar os problemas de segurança apresentados pelas empresas contratantes, sendo <span>transparente</span> ao ponto de prestar o 
                                         serviço com o <span>máximo de excelência</span> sem prejudicar o bom funcionamento das tarefas cotidianas da empresa contratante.
                                     </p>
                             </div>
-                            <div class="project-img">
+                            <div class="project_image">
                                 <img src="./vectors/focus.svg"/>
                             </div>
                         </div>
-                        <div class="project-item">
-                            <div class="project-info">
+                        <div class="project_item">
+                            <div class="project_info">
                                 <h1> Qualidade </h1>
                                     <p>
                                         Entregamos mais <span>qualidade</span> pois investimos em treinamento e capacitação dos colaboradores, bem como praticamos <span>políticas diferenciadas</span> para retenção de
@@ -162,7 +162,7 @@
                                         <span>constantemente atualizados</span>.
                                     </p>
                             </div>
-                            <div class="project-img">
+                            <div class="project_image">
                                 <img src="./vectors/quality-assurance.svg"/>
                             </div>
                         </div>
