Minificação dos CSS das Sections Footer e Contact.
Minificação dos códigos-fonte CSS (Inline CSS) da Section - Footer;
Minificação final dos códigos-fonte CSS (Inline CSS) da Section - Contact;
Todos os ajustes, de momento, foram feitos para os códigos-fonte Mobile First.

--- a/index.html
+++ b/index.html
@@ -225,13 +225,13 @@
 
                             </p>
                     </div>
-                    <div class="contact-items">
+                    <div class="contact_items">
                         <a href="http://api.whatsapp.com/send?1=pt_BR&phone=5554999574777" target="_blank">
-                            <div class="contact-item">
+                            <div class="contact_item">
                                 <div class="icon">
                                     <img src="./icons/whatsapp.svg" width="100px"/>
                                 </div>
-                                <div class="contact-info">
+                                <div class="contact_info">
                                     <h1> WhatsApp </h1>
                                         <h2> Paulo Augusto Gobbi </h2>
                                             <h3> (54) 9.9957-4777 </h2>
@@ -239,11 +239,11 @@
                             </div>
                         </a>
                         <a href="mailto:paulo@jpgobbi.com.br" target="_blank">
-                            <div class="contact-item">
+                            <div class="contact_item">
                                 <div class="icon">
                                     <img src="./icons/email.svg" width="100px"/>
                                 </div>
-                                <div class="contact-info">
+                                <div class="contact_info">
                                     <h1> E-Mail </h1>
                                         <h2> Paulo Augusto Gobbi </h2>
                                             <h3> paulo@jpgobbi.com.br </h2>
@@ -251,11 +251,11 @@
                             </div>
                         </a>
                         <a href="https://www.google.com/maps/place/R.+Maring%C3%A1,+180,+S%C3%A3o+Marcos+-+RS,+95190-000,+Brazil/@-28.9712445,-51.0805789,17z/data=!4m5!3m4!1s0x951e93cb3fbd76ed:0x3ff33d966c0afc07!8m2!3d-28.9703998!4d-51.0786906?hl=en" target="_blank">
-                            <div class="contact-item">
+                            <div class="contact_item">
                                 <div class="icon">
                                     <img src="./icons/mapmarker.svg" width="100px"/>
                                 </div>
-                                <div class="contact-info">
+                                <div class="contact_info">
                                     <h1> Endereço </h1>
                                         <h2>JPGOBBI Seg. Privada</h2>
                                             <h3> Rua Maringá, 180 - Centro - São Marcos - RS - 95190-000 </h2>
@@ -274,8 +274,8 @@
                         <h1 class="brand_title"> JPGOBBI <span class="brand_span">Segurança Privada</span> </h1>
                     </div>
                         <h2> Acompanhe a gente nas redes sociais! </h2>
-                            <div class="social-icon">
-                                <div class="social-item">
+                            <div class="social_icon">
+                                <div class="social_item">
                                     <a href="https://www.facebook.com/jpgobbi" target="_blank"> <img src="./icons/facebook.svg" width="100px"/> </a>
                                 </div>
                             </div>
