--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                                 <div class="bar"> </div>
                             </div>
                                 <ul>
-                                    <li> <a href="#hero" data-after="Home" class="active"> Home </a> </li>
+                                    <li> <a href="#hero" data-after="Home"> Home </a> </li>
                                     <li> <a href="#services" data-after="Serviços"> Serviços </a> </li>
                                     <li> <a href="#projects" data-after="Sobre"> Sobre </a> </li>
                                     <li> <a href="#about" data-after="Direção"> Direção </a> </li>
